Setup connection configuration stuff Added .gitignore for security

--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionString": {
+    "DefaultConnection": "data source=MSI;initial catalog=valsebu;trusted_connection=true"
+  },
   "AllowedHosts": "*"
 }
